change memzuç to banka

--- a/src/main/webapp/views/performance.xhtml
+++ b/src/main/webapp/views/performance.xhtml
@@ -92,7 +92,7 @@
 							<p:column headerText="Tip" style="font-size:12px;font-weight:bold;">
 								<p:outputLabel value="Rapor" rendered="#{index == 0}"/>
 								<p:outputLabel value="Çek" rendered="#{index == 1}"/>
-								<p:outputLabel value="Memzuç" rendered="#{index == 2}"/>
+								<p:outputLabel value="Banka" rendered="#{index == 2}"/>
 								<p:outputLabel value="Toplam" rendered="#{index == 3}"/>
 							</p:column>
 							<p:columns value="#{performanceController.performance.personels}" var="personel" style="font-size:12px;text-align:center">
@@ -126,7 +126,7 @@
 							<p:column headerText="Tip" style="font-size:12px;font-weight:bold;">
 								<p:outputLabel value="Rapor" rendered="#{index == 0}"/>
 								<p:outputLabel value="Çek" rendered="#{index == 1}"/>
-								<p:outputLabel value="Memzuç" rendered="#{index == 2}"/>
+								<p:outputLabel value="Banka" rendered="#{index == 2}"/>
 								<p:outputLabel value="Toplam" rendered="#{index == 3}"/>
 							</p:column>
 							<p:columns value="#{performanceController.performance.months}" var="month" style="font-size:12px;text-align:center">
